fixed some height

--- a/src/style/contact.scss
+++ b/src/style/contact.scss
@@ -4,6 +4,8 @@
   align-items: center;
   margin-top: 30px;
   margin-bottom: 30px;
+  height: 55vh;
+
   .grid-wrapper {
     width: 1000px;
     display: grid;
