--- a/src/style/about.scss
+++ b/src/style/about.scss
@@ -3,6 +3,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  height: 60vh;
 
   .page-container {
     display: flex;
