--- a/src/style/footer.scss
+++ b/src/style/footer.scss
@@ -6,7 +6,7 @@
 
   font-family: "ubuntu Condensed", sans-serif;
 
-  color: #cbcbcb;
+  // color: #cbcbcb;
   background: linear-gradient(to bottom, #5a433b 0%, #efe9d1 100%);
 
   height: 290px;
