--- a/src/style/about.scss
+++ b/src/style/about.scss
@@ -3,11 +3,13 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: 60vh;
+  height: 100%;
+  flex-wrap: wrap;
 
   .page-container {
     display: flex;
     justify-content: center;
+
     margin-bottom: 60px;
     margin-top: 40px;
 
@@ -37,6 +39,7 @@
       align-items: center;
       justify-content: center;
       flex-direction: column;
+      flex-wrap: wrap;
     }
   }
 }
