--- a/src/style/menu.scss
+++ b/src/style/menu.scss
@@ -67,7 +67,7 @@
     justify-content: center;
 
     .squares {
-      width: 100%;
+      width: auto;
       margin-left: 25px;
       margin-right: 25px;
 
